@@ -357,8 +357,10 @@ val development_version : bool
 *)
 
 type extra_prefix = Plus | Tilde
+(** @since 4.14 *)
 
 type extra_info = extra_prefix * string
+(** @since 4.14 *)
 
 type ocaml_release_info = {
   major : int;
@@ -366,8 +368,12 @@ type ocaml_release_info = {
   patchlevel : int;
   extra : extra_info option
 }
+(** @since 4.14 *)
 
 val ocaml_release : ocaml_release_info
+(** [ocaml_release] is the version of OCaml.
+    @since 4.14
+*)
 
 val enable_runtime_warnings: bool -> unit
 [@@alert unsynchronized_access
